Tweak sizes. Fix scrollbar appearing problem

--- a/resources/styles/main.sass
+++ b/resources/styles/main.sass
@@ -1,6 +1,8 @@
 $space: 20px
-body
+body, html
+    overflow: hidden
     padding: 0px
     margin: 0px
 #playground
     margin: 0px
+
